fixes 813 footer too tall

--- a/css/customisations.css
+++ b/css/customisations.css
@@ -114,13 +114,13 @@ header a, a:visited {
 }
 
 .stars, .twinkling, .clouds {
-  position:absolute;
+  position:fixed;
   top:0;
   left:0;
   right:0;
   bottom:0;
   width:100%;
-  height:3500px;
+  max-height:100vh;
   display:block;
   z-index: -3;
 }
